[tool.poetry]
name = "cava"
version = "0.1.0"
description = ""
authors = ["David Snider <david@davidsnider.org>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
pika = "^1.3.1"
fastapi = "^0.115.5"
statsd = "^4.0.1"
arrow = "^1.2.3"
rule-engine = "^4.5.0"

requests = "^2.32.3"
amcrest = "^1.8.0"
httpx = "0.27.2"
uvicorn = "^0.32.1"
pydantic-settings = "^2.6.1"
poetry-plugin-export = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
bandit = "^1.7.10"
black = "^24.10"
flake8 = "^7.1.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
poetry-plugin-export = "^1.8.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
